# ctypes-utils

./: README.md  pyproject.toml  ruff_defaults.toml
ctypes_utils/: __init__.py  converter.py  structure.py
src/ctypes_utils/: __init__.py  converter.py
tests/: test_converter.py  test_structure.py
