[tool.poetry]
name = "ctypes-utils"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Takumasa Nakamura <n.takumasa@gmail.com>"]
readme = "README.md"
packages = [{ include = "ctypes_utils" }]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
  "if typing.TYPE_CHECKING",
  "@overload",
]
